<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/main_bg" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/start_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_bg"
            android:text="@string/start_training"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/error_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_bg"
            android:text="@string/error_questions"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_bg"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>