<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/setting_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5px" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/save_singleChoice_process"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/save_singleprocess"
                style="@style/settings_listview_checkboxTheme"
                android:layout_width="68dp"
                android:layout_height="45dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/save_mutipleChoice_process"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/save_mutipleprocess"
                style="@style/settings_listview_checkboxTheme"
                android:layout_width="68dp"
                android:layout_height="45dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/save_judge_process"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/save_judgeprocess"
                style="@style/settings_listview_checkboxTheme"
                android:layout_width="68dp"
                android:layout_height="45dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white" />
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/auto_save_wrong_question"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/auto_saveWrongQues"
                style="@style/settings_listview_checkboxTheme"
                android:layout_width="68dp"
                android:layout_height="45dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/clear_errorquestions"
            android:layout_width="fill_parent"
            android:layout_height="45dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/clear_error_questions"
                android:textSize="15sp" />
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white" />
    </LinearLayout>

</LinearLayout>